Add context wrapper support for gpt2

--- a/notebooks/test_attention_mask.ipynb
+++ b/notebooks/test_attention_mask.ipynb
@@ -68,11 +68,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODEL = 'gpt2-xl'\n",
+    "MODEL = 'gpt2-xl'\n",
     "# MODEL = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# MODEL = 'meta-llama/Llama-2-7b-hf'\n",
-    "#MODEL = 'google/gemma-7b'\n",
-    "MODEL = 'EleutherAI/pythia-14m'\n",
+    "# MODEL = 'google/gemma-7b'\n",
+    "# MODEL = 'EleutherAI/pythia-14m'\n",
     "MODEL_CONFIGS = {\n",
     "    'torch_dtype': torch.bfloat16,\n",
     "    'attn_implementation': 'eager',\n",
@@ -80,11 +80,11 @@
     "    'token': TOKEN,\n",
     "}\n",
     "\n",
-    "# TOKENIZER = 'gpt2-xl'\n",
+    "TOKENIZER = 'gpt2-xl'\n",
     "# TOKENIZER = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# TOKENIZER = 'meta-llama/Llama-2-7b-hf'\n",
     "#TOKENIZER = 'google/gemma-7b'\n",
-    "TOKENIZER = 'EleutherAI/pythia-14m'\n",
+    "#TOKENIZER = 'EleutherAI/pythia-14m'\n",
     "\n",
     "TOKENIZER_CONFIGS = {'token': TOKEN}"
    ]
@@ -93,7 +93,16 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nicolobrunello/miniconda/envs/nlp/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "model = ContextCausalLMWrapper.from_pretrained(MODEL, \n",
     "                                               att_len=2,\n",
@@ -146,7 +155,18 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of index_put_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[indices] = tensor (Triggered internally at ../aten/src/ATen/native/TensorAdvancedIndexing.cpp:713.)\n",
+      "  attention_mask[..., mask] = torch.finfo(current_hidden_state.dtype).min\n",
+      "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of masked_fill_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[mask] = scalar (Triggered internally at ../aten/src/ATen/native/TensorAdvancedIndexing.cpp:1912.)\n",
+      "  attention_mask[..., mask] = torch.finfo(current_hidden_state.dtype).min\n"
+     ]
+    }
+   ],
    "source": [
     "output_wrapper = model(\n",
     "    **input_encodings,\n",
@@ -169,7 +189,7 @@
      "output_type": "stream",
      "text": [
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
      ]
     }
@@ -190,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "'The capital of Italy is,!!!<|endoftext|>'"
+       "'The capital of Italy is is is is is is is is is is is is is is is is is is is is is'"
       ]
      },
      "execution_count": 13,
@@ -204,17 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.3750, 0.6250],\n",
+       "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4824, 0.5195],\n",
        "       dtype=torch.bfloat16)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,6 +242,13 @@
    "source": [
     "output.attentions[2][0][0, 0, 0, :]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
