Fixed context gpt2 variable attention reimplementation

--- a/notebooks/test_attention_mask.ipynb
+++ b/notebooks/test_attention_mask.ipynb
@@ -73,10 +73,11 @@
     "# MODEL = 'meta-llama/Llama-2-7b-hf'\n",
     "# MODEL = 'google/gemma-7b'\n",
     "# MODEL = 'EleutherAI/pythia-14m'\n",
+    "#MODEL = 'google/gemma-2-9b'\n",
     "MODEL_CONFIGS = {\n",
     "    'torch_dtype': torch.bfloat16,\n",
     "    'attn_implementation': 'eager',\n",
-    "    'device_map': 'cpu',\n",
+    "    'device_map': DEVICE,\n",
     "    'token': TOKEN,\n",
     "}\n",
     "\n",
@@ -85,7 +86,7 @@
     "# TOKENIZER = 'meta-llama/Llama-2-7b-hf'\n",
     "#TOKENIZER = 'google/gemma-7b'\n",
     "#TOKENIZER = 'EleutherAI/pythia-14m'\n",
-    "\n",
+    "#TOKENIZER = 'google/gemma-2-9b'\n",
     "TOKENIZER_CONFIGS = {'token': TOKEN}"
    ]
   },
@@ -148,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_encodings = model.tokenizer(input_string, return_tensors='pt').to('cpu')"
+    "input_encodings = model.tokenizer(input_string, return_tensors='pt').to(DEVICE)"
    ]
   },
   {
@@ -162,7 +163,7 @@
      "text": [
       "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of index_put_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[indices] = tensor (Triggered internally at ../aten/src/ATen/native/TensorAdvancedIndexing.cpp:713.)\n",
       "  attention_mask[..., mask] = torch.finfo(current_hidden_state.dtype).min\n",
-      "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of masked_fill_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[mask] = scalar (Triggered internally at ../aten/src/ATen/native/TensorAdvancedIndexing.cpp:1912.)\n",
+      "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of masked_fill_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[mask] = scalar (Triggered internally at ../aten/src/ATen/native/cuda/Indexing.cu:1562.)\n",
       "  attention_mask[..., mask] = torch.finfo(current_hidden_state.dtype).min\n"
      ]
     }
@@ -196,6 +197,7 @@
    ],
    "source": [
     "output = model.generate(input_encodings.input_ids,\n",
+    "                        #attention_maks=input_encodings['attention_mask'],\n",
     "                        do_sample=False, \n",
     "                        max_length=25, \n",
     "                        return_dict_in_generate=True, \n",
@@ -210,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "'The capital of Italy is is is is is is is is is is is is is is is is is is is is is'"
+       "'The capital of Italy is is is is is is\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'"
       ]
      },
      "execution_count": 13,
@@ -224,17 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4824, 0.5195],\n",
-       "       dtype=torch.bfloat16)"
+       "       device='cuda:0', dtype=torch.bfloat16)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
