Fix gpt2 variable attention mask for generation

--- a/notebooks/test_attention_mask.ipynb
+++ b/notebooks/test_attention_mask.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL = 'gpt2-xl'\n",
+    "MODEL = 'gpt2'\n",
     "# MODEL = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# MODEL = 'meta-llama/Llama-2-7b-hf'\n",
     "# MODEL = 'google/gemma-7b'\n",
@@ -81,7 +81,7 @@
     "    'token': TOKEN,\n",
     "}\n",
     "\n",
-    "TOKENIZER = 'gpt2-xl'\n",
+    "TOKENIZER = 'gpt2'\n",
     "# TOKENIZER = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# TOKENIZER = 'meta-llama/Llama-2-7b-hf'\n",
     "#TOKENIZER = 'google/gemma-7b'\n",
@@ -156,27 +156,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of index_put_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[indices] = tensor (Triggered internally at ../aten/src/ATen/native/TensorAdvancedIndexing.cpp:713.)\n",
-      "  attention_mask[..., mask] = torch.finfo(current_hidden_state.dtype).min\n",
-      "/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:217: UserWarning: Use of masked_fill_ on expanded tensors is deprecated. Please clone() the tensor before performing this operation. This also applies to advanced indexing e.g. tensor[mask] = scalar (Triggered internally at ../aten/src/ATen/native/cuda/Indexing.cu:1562.)\n",
-      "  attention_mask[..., mask] = torch.finfo(current_hidden_state.dtype).min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "output_wrapper = model(\n",
-    "    **input_encodings,\n",
-    "    return_dict=True,\n",
-    "    output_attentions=True,\n",
-    "    use_cache=True,\n",
-    "    output_hidden_stsates=True,\n",
-    "    return_attention_output=True,  # Self-attention layer output\n",
-    "    return_feed_forward_output=True\n",
+    "output_wrapper = model.forward(\n",
+    "    **input_encodings\n",
     ")"
    ]
   },
@@ -212,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "'The capital of Italy is is is is is is\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'"
+       "'The capital of Italy is is is\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"'"
       ]
      },
      "execution_count": 13,
@@ -232,8 +215,12 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4824, 0.5195],\n",
-       "       device='cuda:0', dtype=torch.bfloat16)"
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.8477, 0.1533, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.7500, 0.2500, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.6406, 0.3594, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.0000, 0.4922, 0.5078]], device='cuda:0',\n",
+       "       dtype=torch.bfloat16)"
       ]
      },
      "execution_count": 14,
@@ -242,7 +229,48 @@
     }
    ],
    "source": [
-    "output.attentions[2][0][0, 0, 0, :]"
+    "output.attentions[0][0][0, 0, :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.5000, 0.5000], device='cuda:0',\n",
+       "       dtype=torch.bfloat16)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.attentions[1][0][0, 0, 0, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 12, 5, 5])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.attentions[0][0].shape"
    ]
   },
   {
