WIP Gemma2 support for bbase wrapper

--- a/notebooks/test_attention_mask.ipynb
+++ b/notebooks/test_attention_mask.ipynb
@@ -68,12 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL = 'gpt2'\n",
+    "# MODEL = 'gpt2'\n",
     "# MODEL = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# MODEL = 'meta-llama/Llama-2-7b-hf'\n",
     "# MODEL = 'google/gemma-7b'\n",
     "# MODEL = 'EleutherAI/pythia-14m'\n",
-    "#MODEL = 'google/gemma-2-9b'\n",
+    "MODEL = 'google/gemma-2-9b'\n",
     "MODEL_CONFIGS = {\n",
     "    'torch_dtype': torch.bfloat16,\n",
     "    'attn_implementation': 'eager',\n",
@@ -81,12 +81,12 @@
     "    'token': TOKEN,\n",
     "}\n",
     "\n",
-    "TOKENIZER = 'gpt2'\n",
+    "# TOKENIZER = 'gpt2'\n",
     "# TOKENIZER = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# TOKENIZER = 'meta-llama/Llama-2-7b-hf'\n",
     "#TOKENIZER = 'google/gemma-7b'\n",
     "#TOKENIZER = 'EleutherAI/pythia-14m'\n",
-    "#TOKENIZER = 'google/gemma-2-9b'\n",
+    "TOKENIZER = 'google/gemma-2-9b'\n",
     "TOKENIZER_CONFIGS = {'token': TOKEN}"
    ]
   },
@@ -96,12 +96,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nicolobrunello/miniconda/envs/nlp/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "808ce7aeea664c4588d2914235af4bb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -165,22 +171,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
-      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'ndim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/test_attention_mask.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bopen-brain/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/test_attention_mask.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m output \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mgenerate(input_encodings\u001b[39m.\u001b[39;49minput_ids,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bopen-brain/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/test_attention_mask.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m                         do_sample\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bopen-brain/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/test_attention_mask.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m                         max_length\u001b[39m=\u001b[39;49m\u001b[39m25\u001b[39;49m, \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bopen-brain/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/test_attention_mask.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m                         return_dict_in_generate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, \n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bopen-brain/home/nicolobrunello/Documents/Projects/transformer_wrappers/notebooks/test_attention_mask.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m                         output_attentions\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/base.py:1820\u001b[0m, in \u001b[0;36mCausalLMWrapper.generate\u001b[0;34m(self, return_inner_states, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1817\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_wrapping:\n\u001b[1;32m   1818\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbase_model\u001b[39m.\u001b[39mgenerate(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m-> 1820\u001b[0m generate_output \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mgenerate(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1821\u001b[0m \u001b[39m# Re-run through layers to collect all data  # TODO find better solution\u001b[39;00m\n\u001b[1;32m   1822\u001b[0m \u001b[39mif\u001b[39;00m return_inner_states \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_benchmarking:\n\u001b[1;32m   1823\u001b[0m     \u001b[39m#\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda/envs/nlp/lib/python3.12/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/miniconda/envs/nlp/lib/python3.12/site-packages/transformers/generation/utils.py:2024\u001b[0m, in \u001b[0;36mGenerationMixin.generate\u001b[0;34m(self, inputs, generation_config, logits_processor, stopping_criteria, prefix_allowed_tokens_fn, synced_gpus, assistant_model, streamer, negative_prompt_ids, negative_prompt_attention_mask, **kwargs)\u001b[0m\n\u001b[1;32m   2016\u001b[0m     input_ids, model_kwargs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_expand_inputs_for_generation(\n\u001b[1;32m   2017\u001b[0m         input_ids\u001b[39m=\u001b[39minput_ids,\n\u001b[1;32m   2018\u001b[0m         expand_size\u001b[39m=\u001b[39mgeneration_config\u001b[39m.\u001b[39mnum_return_sequences,\n\u001b[1;32m   2019\u001b[0m         is_encoder_decoder\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39mis_encoder_decoder,\n\u001b[1;32m   2020\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mmodel_kwargs,\n\u001b[1;32m   2021\u001b[0m     )\n\u001b[1;32m   2023\u001b[0m     \u001b[39m# 13. run sample (it degenerates to greedy search when `generation_config.do_sample=False`)\u001b[39;00m\n\u001b[0;32m-> 2024\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sample(\n\u001b[1;32m   2025\u001b[0m         input_ids,\n\u001b[1;32m   2026\u001b[0m         logits_processor\u001b[39m=\u001b[39;49mprepared_logits_processor,\n\u001b[1;32m   2027\u001b[0m         logits_warper\u001b[39m=\u001b[39;49mprepared_logits_warper,\n\u001b[1;32m   2028\u001b[0m         stopping_criteria\u001b[39m=\u001b[39;49mprepared_stopping_criteria,\n\u001b[1;32m   2029\u001b[0m         generation_config\u001b[39m=\u001b[39;49mgeneration_config,\n\u001b[1;32m   2030\u001b[0m         synced_gpus\u001b[39m=\u001b[39;49msynced_gpus,\n\u001b[1;32m   2031\u001b[0m         streamer\u001b[39m=\u001b[39;49mstreamer,\n\u001b[1;32m   2032\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mmodel_kwargs,\n\u001b[1;32m   2033\u001b[0m     )\n\u001b[1;32m   2035\u001b[0m \u001b[39melif\u001b[39;00m generation_mode \u001b[39min\u001b[39;00m (GenerationMode\u001b[39m.\u001b[39mBEAM_SAMPLE, GenerationMode\u001b[39m.\u001b[39mBEAM_SEARCH):\n\u001b[1;32m   2036\u001b[0m     \u001b[39m# 11. prepare logits warper\u001b[39;00m\n\u001b[1;32m   2037\u001b[0m     prepared_logits_warper \u001b[39m=\u001b[39m (\n\u001b[1;32m   2038\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_logits_warper(generation_config, device\u001b[39m=\u001b[39minput_ids\u001b[39m.\u001b[39mdevice)\n\u001b[1;32m   2039\u001b[0m         \u001b[39mif\u001b[39;00m generation_config\u001b[39m.\u001b[39mdo_sample\n\u001b[1;32m   2040\u001b[0m         \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   2041\u001b[0m     )\n",
+      "File \u001b[0;32m~/miniconda/envs/nlp/lib/python3.12/site-packages/transformers/generation/utils.py:2975\u001b[0m, in \u001b[0;36mGenerationMixin._sample\u001b[0;34m(self, input_ids, logits_processor, stopping_criteria, generation_config, synced_gpus, streamer, logits_warper, **model_kwargs)\u001b[0m\n\u001b[1;32m   2969\u001b[0m model_kwargs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_initial_cache_position(input_ids, model_kwargs)\n\u001b[1;32m   2971\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_unfinished_sequences(\n\u001b[1;32m   2972\u001b[0m     this_peer_finished, synced_gpus, device\u001b[39m=\u001b[39minput_ids\u001b[39m.\u001b[39mdevice, cur_len\u001b[39m=\u001b[39mcur_len, max_length\u001b[39m=\u001b[39mmax_length\n\u001b[1;32m   2973\u001b[0m ):\n\u001b[1;32m   2974\u001b[0m     \u001b[39m# prepare model inputs\u001b[39;00m\n\u001b[0;32m-> 2975\u001b[0m     model_inputs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprepare_inputs_for_generation(input_ids, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mmodel_kwargs)\n\u001b[1;32m   2977\u001b[0m     \u001b[39m# prepare variable output controls (note: some models won't accept all output controls)\u001b[39;00m\n\u001b[1;32m   2978\u001b[0m     model_inputs\u001b[39m.\u001b[39mupdate({\u001b[39m\"\u001b[39m\u001b[39moutput_attentions\u001b[39m\u001b[39m\"\u001b[39m: output_attentions} \u001b[39mif\u001b[39;00m output_attentions \u001b[39melse\u001b[39;00m {})\n",
+      "File \u001b[0;32m~/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/context.py:472\u001b[0m, in \u001b[0;36mContextCausalLMWrapper.prepare_inputs_for_generation\u001b[0;34m(self, att_len, *args, **kwargs)\u001b[0m\n\u001b[1;32m    466\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprepare_inputs_for_generation\u001b[39m(\n\u001b[1;32m    467\u001b[0m         \u001b[39mself\u001b[39m,\n\u001b[1;32m    468\u001b[0m         \u001b[39m*\u001b[39margs,\n\u001b[1;32m    469\u001b[0m         att_len: Optional[\u001b[39mint\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    470\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[1;32m    471\u001b[0m ):\n\u001b[0;32m--> 472\u001b[0m     inputs \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mprepare_inputs_for_generation(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs) \u001b[39m|\u001b[39m {\n\u001b[1;32m    473\u001b[0m         ATT_LEN: att_len\n\u001b[1;32m    474\u001b[0m     }\n\u001b[1;32m    476\u001b[0m     \u001b[39mreturn\u001b[39;00m inputs\n",
+      "File \u001b[0;32m~/Documents/Projects/transformer_wrappers/notebooks/../src/transformer_wrappers/wrappers/base.py:1843\u001b[0m, in \u001b[0;36mCausalLMWrapper.prepare_inputs_for_generation\u001b[0;34m(self, base_model_output, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1841\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprepare_inputs_for_generation\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, base_model_output: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m   1842\u001b[0m     \u001b[39m#\u001b[39;00m\n\u001b[0;32m-> 1843\u001b[0m     inputs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minternal_model\u001b[39m.\u001b[39;49mprepare_inputs_for_generation(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1844\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_wrapping:\n\u001b[1;32m   1845\u001b[0m         inputs \u001b[39m|\u001b[39m\u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mbase_model_output\u001b[39m\u001b[39m'\u001b[39m: base_model_output}\n",
+      "File \u001b[0;32m~/miniconda/envs/nlp/lib/python3.12/site-packages/transformers/models/gemma2/modeling_gemma2.py:1081\u001b[0m, in \u001b[0;36mGemma2ForCausalLM.prepare_inputs_for_generation\u001b[0;34m(self, input_ids, past_key_values, attention_mask, inputs_embeds, cache_position, position_ids, use_cache, **kwargs)\u001b[0m\n\u001b[1;32m   1075\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1076\u001b[0m     \u001b[39m# The clone here is for the same reason as for `position_ids`.\u001b[39;00m\n\u001b[1;32m   1077\u001b[0m     model_inputs \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39minput_ids\u001b[39m\u001b[39m\"\u001b[39m: input_ids\u001b[39m.\u001b[39mclone(memory_format\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mcontiguous_format), \u001b[39m\"\u001b[39m\u001b[39minputs_embeds\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mNone\u001b[39;00m}\n\u001b[1;32m   1079\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   1080\u001b[0m     \u001b[39misinstance\u001b[39m(past_key_values, HybridCache)\n\u001b[0;32m-> 1081\u001b[0m     \u001b[39mand\u001b[39;00m attention_mask\u001b[39m.\u001b[39;49mndim \u001b[39m==\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m   1082\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39m_attn_implementation \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mflash_attention_2\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1083\u001b[0m ):\n\u001b[1;32m   1084\u001b[0m     \u001b[39mif\u001b[39;00m model_inputs[\u001b[39m\"\u001b[39m\u001b[39minputs_embeds\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1085\u001b[0m         batch_size, sequence_length, _ \u001b[39m=\u001b[39m model_inputs[\u001b[39m\"\u001b[39m\u001b[39minputs_embeds\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mshape\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'ndim'"
      ]
     }
    ],
    "source": [
     "output = model.generate(input_encodings.input_ids,\n",
-    "                        #attention_maks=input_encodings['attention_mask'],\n",
     "                        do_sample=False, \n",
     "                        max_length=25, \n",
     "                        return_dict_in_generate=True, \n",
