--- a/notebooks/speech_transformer.ipynb
+++ b/notebooks/speech_transformer.ipynb
@@ -51,6 +51,22 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "import os"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-24T12:01:35.142328Z",
+     "start_time": "2024-10-24T12:01:35.137223Z"
+    }
+   },
+   "id": "7d60c7fef36e92da",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "import torch"
    ],
    "metadata": {
@@ -88,6 +104,31 @@
    },
    "id": "1da0d0b936e4c968",
    "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vincenzoscotti/anaconda3/envs/trwrap/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformer_wrappers.data import MozillaCommonVoice, ProcessedMozillaCommonVoice"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-24T12:01:38.266747Z",
+     "start_time": "2024-10-24T12:01:37.136901Z"
+    }
+   },
+   "id": "d5e6479340da0bd",
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -130,6 +171,38 @@
    },
    "id": "f69813390cefb01",
    "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "MCV_IT_PATH = os.path.join(os.environ['HOME'], 'Data/mozilla_common_voice/cv-corpus-19.0-2024-09-13/')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-24T12:01:42.459759Z",
+     "start_time": "2024-10-24T12:01:42.453650Z"
+    }
+   },
+   "id": "b8b2a380f241d766",
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "LANG = 'it'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-24T12:01:43.873691Z",
+     "start_time": "2024-10-24T12:01:43.867958Z"
+    }
+   },
+   "id": "ad0bc012c41dcb2e",
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -279,6 +352,16 @@
    "id": "97f918b01e57fc80"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Dummy data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ffb60ee6c7aa1108"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -325,6 +408,50 @@
    },
    "id": "17955e75a9bd184",
    "execution_count": 13
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Mozilla Common Voice"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dd7dad6bcf486852"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "mcv = MozillaCommonVoice(MCV_IT_PATH, 'validation', language=LANG)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-24T12:13:15.977336Z",
+     "start_time": "2024-10-24T12:13:15.931672Z"
+    }
+   },
+   "id": "72baf5900fcb5321",
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "pmcv = ProcessedMozillaCommonVoice(\n",
+    "    model.tokenizer, \n",
+    "    MCV_IT_PATH, \n",
+    "    'validation', \n",
+    "    language=LANG, \n",
+    "    max_samples_per_task=4, \n",
+    "    random_seed=2307\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1608343569119d0f"
   },
   {
    "cell_type": "markdown",
