Checkpoint stable code

--- a/notebooks/speech_transformer.ipynb
+++ b/notebooks/speech_transformer.ipynb
@@ -208,6 +208,17 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "AUDIO_TOKEN = '<|audio|>'"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a1e00268af820f16"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "MODEL = 'gpt2'  \n",
     "# MODEL = 'mistralai/Mistral-7B-Instruct-v0.3'  \n",
     "# MODEL = 'meta-llama/Llama-3.1-8B-Instruct'\n",
@@ -217,7 +228,7 @@
     "    'device_map': 'cpu',  # torch.device('cuda' if torch.cuda.is_available() else 'cpu'),\n",
     "    'token': TOKEN\n",
     "}\n",
-    "TOKENIZER_CONFIGS = {'token': TOKEN, 'pad_token': '<|endoftext|>', 'additional_special_tokens': ['<|audio|>']}"
+    "TOKENIZER_CONFIGS = {'token': TOKEN, 'pad_token': '<|endoftext|>', 'additional_special_tokens': [AUDIO_TOKEN]}"
    ],
    "metadata": {
     "collapsed": false,
@@ -441,6 +452,7 @@
    "source": [
     "pmcv = ProcessedMozillaCommonVoice(\n",
     "    model.tokenizer, \n",
+    "    AUDIO_TOKEN,\n",
     "    MCV_IT_PATH, \n",
     "    'validation', \n",
     "    language=LANG, \n",
